--- a/public/index.html
+++ b/public/index.html
@@ -24,16 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>KU-bti</title>
+    <title>나는 누KU</title>
     <script type="text/javascript">
       document.oncontextmenu = function(){return false;}
     </script>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://mintway0341.github.io/ku-bti"/>
-    <meta property="og:image" content="../src/assets/og_image.png"/>
-    <meta property="og:image:secure" content="../src/assets/og_image.png"/>
-    <meta property="og:title" content="KU-bti"/>
-    <meta property="og:description" content="🐯고대생을 위한 성격유형 검사"/>
+    <meta property="og:url" content="https://mintway0341.github.io/aegineung"/>
+    <meta property="og:title" content="나는 누KU"/>
+    <meta property="og:description" content="기능 가을축제 유형테스트"/>
     <!-- 다음의 태그는 필수는 아니지만, 포함하는 것을 추천함 -->
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
