--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://mintway0341.github.io/aegineung"/>
     <meta property="og:title" content="나는 누KU"/>
-    <meta property="og:description" content="기능 가을축제 유형테스트"/>
+    <meta property="og:description" content="애기능 가을축제 유형테스트"/>
     <!-- 다음의 태그는 필수는 아니지만, 포함하는 것을 추천함 -->
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
